[gd_scene load_steps=20 format=2]

[ext_resource path="res://GHAttack.tres" type="Theme" id=1]
[ext_resource path="res://CardFace.tscn" type="PackedScene" id=2]
[ext_resource path="res://GHBigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://bg3.png" type="Texture" id=4]
[ext_resource path="res://ActiveWindow.gd" type="Script" id=5]
[ext_resource path="res://bg2.png" type="Texture" id=6]
[ext_resource path="res://GHAttackInvert.tres" type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
shadow_size = 10
shadow_offset = Vector2( 10, 10 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="ActiveWindow" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 7 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 527.0
texture = ExtResource( 4 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 527.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ActiveContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 298.0
margin_bottom = 513.0

[node name="CardFace" parent="MarginContainer/ActiveContainer" instance=ExtResource( 2 )]
margin_right = 288.0
margin_bottom = 195.0
rect_min_size = Vector2( 288, 195 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActiveQuestion" type="Label" parent="MarginContainer/ActiveContainer"]
margin_top = 199.0
margin_right = 288.0
margin_bottom = 328.0
size_flags_horizontal = 3
text = "Number of cards
still active?"
align = 1

[node name="CountBg" type="MarginContainer" parent="MarginContainer/ActiveContainer"]
margin_top = 332.0
margin_right = 288.0
margin_bottom = 436.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/ActiveContainer/CountBg"]
margin_right = 288.0
margin_bottom = 104.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="CountContainer" type="HBoxContainer" parent="MarginContainer/ActiveContainer/CountBg"]
margin_right = 288.0
margin_bottom = 104.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="MinusButton" type="Button" parent="MarginContainer/ActiveContainer/CountBg/CountContainer"]
margin_right = 93.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 1 )
text = "-"

[node name="CardCount" type="Label" parent="MarginContainer/ActiveContainer/CountBg/CountContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1

[node name="PlusButton" type="Button" parent="MarginContainer/ActiveContainer/CountBg/CountContainer"]
margin_left = 194.0
margin_right = 288.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 2 )
text = "+"

[node name="DoneButton" type="Button" parent="MarginContainer/ActiveContainer"]
margin_top = 440.0
margin_right = 288.0
margin_bottom = 503.0
custom_styles/normal = SubResource( 3 )
text = "Done"

[connection signal="pressed" from="MarginContainer/ActiveContainer/CountBg/CountContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="MarginContainer/ActiveContainer/CountBg/CountContainer/PlusButton" to="." method="_on_PlusButton_pressed"]
[connection signal="pressed" from="MarginContainer/ActiveContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
